--- a/po/pl.po
+++ b/po/pl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
 "PO-Revision-Date: 2006-06-08 23:00+0200\n"
-"Last-Translator: Szymon Kałasz <szymon_maestro@gazeta.pl>\n"
+"Last-Translator: Piotr Maliński <riklaunim@gmail.com>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -139,39 +139,35 @@ msgstr "Twórca"
 
 #: ../panel/main.c:60
 msgid "Show this message and exit"
-msgstr ""
+msgstr "Pokaż tą wiadomość i wyjdź"
 
 #: ../panel/main.c:61
-#, fuzzy
 msgid "Show configuration dialog"
-msgstr "Pokaż ikony powiadomie_nia"
+msgstr "Pokaż okno konfiguracji"
 
 #: ../panel/main.c:62
 msgid "Save configuration"
-msgstr ""
+msgstr "Zapis konfigurację"
 
 #: ../panel/main.c:63
-#, fuzzy
 msgid "Restart panels"
-msgstr "Restart"
+msgstr "Restartuj panele"
 
 #: ../panel/main.c:64
 msgid "End the session"
-msgstr ""
+msgstr "Zakończ sesję"
 
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
-msgstr ""
+msgstr "Zamknij wszystkie panele i zakończ program"
 
 #: ../panel/main.c:66
-#, fuzzy
 msgid "Add new items"
-msgstr "Nowy element"
+msgstr "Dodaj nowe elementy"
 
 #: ../panel/main.c:90
-#, fuzzy
 msgid "Failed to open display"
-msgstr "Nie mogę uruchomić \"%s\""
+msgstr "Nie mogę otworzyć ekranu"
 
 #: ../panel/main.c:102
 msgid "Copyright (c) 2004-2007"
@@ -223,14 +219,12 @@ msgid "Full Width"
 msgstr "Pełna Długość"
 
 #: ../panel/panel-dialogs.c:913 ../panel/panel-dialogs.c:1149
-#, fuzzy
 msgid "Normal Height"
-msgstr "Normalna Długość"
+msgstr "Normalna Wysokość"
 
 #: ../panel/panel-dialogs.c:914 ../panel/panel-dialogs.c:1150
-#, fuzzy
 msgid "Full Height"
-msgstr "Pełna Długość"
+msgstr "Pełna Wysokość"
 
 #: ../panel/panel-dialogs.c:922 ../panel/panel-dialogs.c:1159
 msgid "Span Monitors"
@@ -320,9 +314,8 @@ msgid "Make active panel opaque"
 msgstr "Uczyń aktywny panel przeźroczystym"
 
 #: ../panel/panel-dialogs.c:1510
-#, fuzzy
 msgid "Popup position:"
-msgstr "Pozycja"
+msgstr "Pozycja Popupa:"
 
 #: ../panel/panel-dialogs.c:1520
 msgid "Automatic"
@@ -369,9 +362,8 @@ msgid "Custom"
 msgstr ""
 
 #: ../plugins/clock/clock-dialog.c:412
-#, fuzzy
 msgid "Display _seconds"
-msgstr "Pokaż zegar przed ikonami"
+msgstr "Wyświetlaj _sekundy"
 
 #: ../plugins/clock/clock-dialog.c:421
 msgid "Use 24-_hour clock"
@@ -382,9 +374,8 @@ msgid "Fl_ash time separators"
 msgstr ""
 
 #: ../plugins/clock/clock-dialog.c:433
-#, fuzzy
 msgid "Sho_w AM/PM"
-msgstr "AM/PM"
+msgstr "P_okazuj AM/PM"
 
 #: ../plugins/clock/clock-dialog.c:442
 msgid "True _binary clock"
@@ -409,9 +400,8 @@ msgid "Digital"
 msgstr "Cyfrowy"
 
 #: ../plugins/clock/clock-dialog.c:515
-#, fuzzy
 msgid "LCD"
-msgstr "LED"
+msgstr "LCD"
 
 #. show frame
 #: ../plugins/clock/clock-dialog.c:520
@@ -453,7 +443,7 @@ msgid "New Item"
 msgstr "Nowy element"
 
 #: ../plugins/launcher/launcher-exec.c:526
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to launch \"%s\""
 msgstr "Nie mogę uruchomić \"%s\""
 
@@ -462,14 +452,12 @@ msgid "No icon"
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:597
-#, fuzzy
 msgid "Select a Directory"
-msgstr "Wybierz Monitor"
+msgstr "Wybierz Katalog"
 
 #: ../plugins/launcher/launcher-dialog.c:641
-#, fuzzy
 msgid "Select an Application"
-msgstr "Wybierz polecenie:"
+msgstr "Wybierz Aplikację"
 
 #: ../plugins/launcher/launcher-dialog.c:651
 msgid "All Files"
@@ -512,24 +500,20 @@ msgid "Unnamed"
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:1120
-#, fuzzy
 msgid "_Name"
-msgstr "Nazwa"
+msgstr "_Nazwa"
 
 #: ../plugins/launcher/launcher-dialog.c:1138
-#, fuzzy
 msgid "_Description"
-msgstr "Opis"
+msgstr "_Opis"
 
 #: ../plugins/launcher/launcher-dialog.c:1157
-#, fuzzy
 msgid "_Icon"
-msgstr "Boks Ikon"
+msgstr "_Ikona"
 
 #: ../plugins/launcher/launcher-dialog.c:1175
-#, fuzzy
 msgid "Co_mmand"
-msgstr "Polecenie"
+msgstr "Po_lecenie"
 
 #: ../plugins/launcher/launcher-dialog.c:1202
 msgid "_Working Directory"
@@ -549,18 +533,16 @@ msgid "Program Launcher"
 msgstr "Aktywator"
 
 #: ../plugins/launcher/launcher-dialog.c:1551
-#, fuzzy
 msgid "A_rrow:"
-msgstr "Przycisk _Strzałki"
+msgstr "_Strzałka"
 
 #: ../plugins/launcher/launcher-dialog.c:1557
 msgid "Default"
 msgstr "Domyślny"
 
 #: ../plugins/launcher/launcher-dialog.c:1562
-#, fuzzy
 msgid "Inside Button"
-msgstr "Przyciski _Ikony"
+msgstr "Przyciski Wewnętrzny"
 
 #: ../plugins/pager/pager.c:365 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
@@ -579,9 +561,8 @@ msgid "Switch workspaces using the mouse wheel"
 msgstr "Przełącz pulpity za pomocą rolki myszy"
 
 #: ../plugins/pager/pager.c:434
-#, fuzzy
 msgid "Show workspace names"
-msgstr "Pokaż akcje pulpitu"
+msgstr "Pokaż nazwy pulpitów"
 
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -589,9 +570,8 @@ msgid "Separator or Spacing"
 msgstr "Separator lub Odstęp"
 
 #: ../plugins/separator/separator.c:430
-#, fuzzy
 msgid "Separator Style"
-msgstr "Separator lub Odstęp"
+msgstr "Styl Separatora"
 
 #. space
 #: ../plugins/separator/separator.c:437
@@ -607,9 +587,8 @@ msgid "_Line"
 msgstr ""
 
 #: ../plugins/separator/separator.c:464
-#, fuzzy
 msgid "_Handle"
-msgstr "Uchwyt:"
+msgstr "_Uchwyt"
 
 #: ../plugins/separator/separator.c:473
 msgid "_Dots"
@@ -641,21 +620,18 @@ msgid "The tray manager lost selection"
 msgstr ""
 
 #: ../plugins/systray/xfce-tray-dialogs.c:280
-#, fuzzy
 msgid "Are you sure you want to clear the list of known applications?"
-msgstr "Czy chcesz usunąć pulpit '%s'?"
+msgstr "Czy chcesz usunąć listę znanych aplikacji?"
 
 #. number of rows
 #: ../plugins/systray/xfce-tray-dialogs.c:374
-#, fuzzy
 msgid "_Number of rows:"
-msgstr "Ilość wierszy:"
+msgstr "_Ilość wierszy:"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
-#, fuzzy
 msgid "Hidden Applications"
-msgstr "Wybierz polecenie:"
+msgstr "Ukryte Aplikacje"
 
 #: ../plugins/systray/xfce-tray-manager.c:431
 #, c-format
@@ -677,9 +653,8 @@ msgid "Use flat buttons"
 msgstr "Użyj płaskich przycisków"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:200
-#, fuzzy
 msgid "Show handle"
-msgstr "Pokaż _ramkę"
+msgstr "Pokaż uchwyt"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:212
 msgid "Show tasks from _all workspaces"
