--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-10  Maximilian Schleiss <maximilian@xfce.org>
+
+	* ko.po: Korean translation updated (ByungHyun Choi)
+	* pl.po: Polish translation updated (Piotr Maliński)
+
 2008-07-22  Og Maciel <ogmaciel@gnome.org>
 
     * pt_BR.po: Updated Brazilian Portuguese translation (Fábio Nogueira)
