update french translation
(Old svn revision: 27828)

--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2008-02-19 19:16+0100\n"
+"PO-Revision-Date: 2008-09-12 12:03+0200\n"
 "Last-Translator: Mike Massonnet <mmassonnet@gmail.com>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -570,7 +570,7 @@ msgstr "À l’intérieur"
 #: ../plugins/pager/pager.c:365
 #: ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
-msgstr "Bureaux"
+msgstr "Espaces de travail"
 
 #: ../plugins/pager/pager.c:396
 msgid "Number of rows:"
