--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-12  Mike Massonnet <mmassonnet@xfce.org>
+
+	* fr.po: Small change (s/Bureaux/Espaces de travail)
+
 2008-08-10  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ko.po: Korean translation updated (ByungHyun Choi)
@@ -5,7 +9,7 @@
 
 2008-07-22  Og Maciel <ogmaciel@gnome.org>
 
-    * pt_BR.po: Updated Brazilian Portuguese translation (Fábio Nogueira)
+	* pt_BR.po: Updated Brazilian Portuguese translation (Fábio Nogueira)
 
 2008-06-26  Maximilian Schleiss <maximilian@xfce.org>
 
