(Old svn revision: 27856)

--- a/po/da.po
+++ b/po/da.po
@@ -197,7 +197,7 @@ msgstr "Genstart xfce4-panel..."
 #: ../panel/panel-dialogs.c:189
 #, c-format
 msgid "Could not open \"%s\" module"
-msgstr "Kunne ikke åbne \"%s\" modulet "
+msgstr "Kunne ikke åbne \"%s\" modulet"
 
 #: ../panel/panel-dialogs.c:634
 msgid "Add Items to the Panel"
@@ -649,7 +649,7 @@ msgstr "Er du sikker på at du vil nulstille listen af kendte programmer?"
 #. number of rows
 #: ../plugins/systray/xfce-tray-dialogs.c:374
 msgid "_Number of rows:"
-msgstr "_Antal rækker"
+msgstr "_Antal rækker:"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
@@ -690,11 +690,11 @@ msgstr "Grupper aldrig opgaver"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:223
 msgid "Automatically group tasks"
-msgstr "Grupper automatisk opgaver "
+msgstr "Gruppér automatisk opgaver"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:224
 msgid "Always group tasks"
-msgstr "Grupper altid opgaver"
+msgstr "Gruppér altid opgaver"
 
 #: ../plugins/windowlist/windowlist.c:263
 #, c-format
