* da.po: Danish translation updated
(Old svn revision: 27930)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-23 Lars Nielsen <lars@mit-web.dk>
+
+	* da.po: Danish translation updated
+	
 2008-09-12  Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: Small change (s/Bureaux/Espaces de travail)
