(Old svn revision: 27931)

--- a/po/da.po
+++ b/po/da.po
@@ -169,7 +169,7 @@ msgstr "Kunne ikke åbne skærmen"
 
 #: ../panel/main.c:102
 msgid "Copyright (c) 2004-2007"
-msgstr "Copyright (c) 2004-2008"
+msgstr "Copyright (c) 2004-2007"
 
 #: ../panel/main.c:103
 msgid "The Xfce development team. All rights reserved."
@@ -204,7 +204,7 @@ msgid ""
 "the list."
 msgstr ""
 "Træk elementer fra listen til et panel eller træk dem tilbage til listen for at "
-"fjerne dem"
+"fjerne dem."
 
 #: ../panel/panel-dialogs.c:682
 msgid "Available Items"
@@ -265,7 +265,7 @@ msgstr "Frit flytbart"
 
 #: ../panel/panel-dialogs.c:1167
 msgid "Auto_hide"
-msgstr "Skjul automatisk"
+msgstr "Sk_jul automatisk"
 
 #: ../panel/panel-dialogs.c:1185 ../plugins/actions/actions.c:471
 msgid "Orientation:"
@@ -315,7 +315,7 @@ msgstr "Gør aktivt panel uigennemsigtigt"
 
 #: ../panel/panel-dialogs.c:1510
 msgid "Popup position:"
-msgstr "Pop op position"
+msgstr "Pop op position:"
 
 #: ../panel/panel-dialogs.c:1520
 msgid "Automatic"
@@ -347,7 +347,7 @@ msgstr "Lås skærm"
 
 #: ../plugins/actions/actions.c:419
 msgid "Panel Actions"
-msgstr "Panelhændelser:"
+msgstr "Panelhændelser"
 
 #: ../plugins/actions/actions.c:449
 msgid "Select action type:"
@@ -525,7 +525,7 @@ msgstr "Kør i _terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:1250
 msgid "Use _startup notification"
-msgstr "Brug startopbesked"
+msgstr "Brug _startopbesked"
 
 #. create new dialog
 #: ../plugins/launcher/launcher-dialog.c:1523
@@ -552,11 +552,11 @@ msgstr "Skrivebordsskifter"
 
 #: ../plugins/pager/pager.c:396
 msgid "Number of rows:"
-msgstr "Antal rækker"
+msgstr "Antal rækker:"
 
 #: ../plugins/pager/pager.c:400
 msgid "Number of columns:"
-msgstr "Antal kolonner"
+msgstr "Antal kolonner:"
 
 #: ../plugins/pager/pager.c:426
 msgid "Switch workspaces using the mouse wheel"
@@ -661,7 +661,7 @@ msgstr "Vis håndtag"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:212
 msgid "Show tasks from _all workspaces"
-msgstr "Vis opgaver fra alle arbejdsområder"
+msgstr "Vis opgaver fra _alle arbejdsområder"
 
 #. keep order in sync with WnckTasklistGroupingType
 #: ../plugins/tasklist/tasklist-dialogs.c:222
@@ -747,7 +747,7 @@ msgstr "P_ilknap"
 
 #: ../plugins/windowlist/windowlist-dialog.c:221
 msgid "Show _windows from all workspaces"
-msgstr "Vis vinduer fra alle arbejdsområder"
+msgstr "Vis _vinduer fra alle arbejdsområder"
 
 #: ../plugins/windowlist/windowlist-dialog.c:230
 msgid "Show a_pplication icons"
@@ -755,7 +755,7 @@ msgstr "Vis _programikoner"
 
 #: ../plugins/windowlist/windowlist-dialog.c:239
 msgid "Show wor_kspace actions"
-msgstr "Vis skrivebordshændelser"
+msgstr "Vis s_krivebordshændelser"
 
 #: ../mcs-plugin/plugin.c:39
 msgid "Failed to launch 'xfce4-panel -c'"
