Translation updates: 	- xfce4-appfinder:	ja, si 	- xfce-utils:		ja, si 	- xfce4-mixer:		si 	- xfce4-panel:		ja, si 	- xfdesktop:		ja 	- terminal:			ja
(Old svn revision: 28092)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-07  Maximilian Schleiss <maximilian@xfce.org>
+
+	* ja.po: Japanese translation update (Masato Hashimoto)
+	* si.po: Sinhalese translation update (Rashan Anushka)
+
 2008-10-05  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po: Spanish translation update (Abel Martín)
