--- a/po/ja.po
+++ b/po/ja.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.5.0.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2007-07-10 20:29+0900\n"
-"Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
+"PO-Revision-Date: 2008-10-07 20:29+0900\n"
+"Last-Translator: Masato Hashimoto <cabezon.hashimoto@gmail.com>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,15 +23,15 @@ msgstr "コマンドプロンプト"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr "Xターミナルエミュレーター"
+msgstr "X ターミナルエミュレータ"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr "テキストファイルの編集を行います。"
+msgstr "テキストファイルを編集します"
 
 #: ../config/launcher-8.rc.in.h:2
 msgid "Editor"
-msgstr "エディター"
+msgstr "エディタ"
 
 #: ../config/launcher-9.rc.in.h:1
 msgid "File Manager"
@@ -39,15 +39,15 @@ msgstr "ファイルマネージャー"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr "ファイル・フォルダを管理します。"
+msgstr "ファイルやフォルダを管理します"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr "インターネットを閲覧します。"
+msgstr "インターネットを閲覧します"
 
 #: ../config/launcher-10.rc.in.h:2
 msgid "Web Browser"
-msgstr "ウェブブラウザー"
+msgstr "ウェブブラウザ"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:169
@@ -58,7 +58,7 @@ msgstr "アイテムが突然削除されました: %s"
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:606
 #, c-format
 msgid "Remove \"%s\"?"
-msgstr "「%s」を削除しますか？"
+msgstr "「%s」を削除しますか?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:620
 msgid ""
@@ -112,7 +112,7 @@ msgstr "Xfce パネルについて"
 
 #: ../panel/panel-app.c:258 ../panel/panel-app.c:892
 msgid "Exit Xfce Panel?"
-msgstr "Xfce パネルを終了しますか？"
+msgstr "Xfce パネルを終了しますか?"
 
 #: ../panel/panel-app.c:890 ../panel/panel-app.c:922 ../panel/panel-app.c:955
 msgid "Xfce Panel"
@@ -121,12 +121,12 @@ msgstr "Xfce パネル"
 #: ../panel/panel-app.c:893
 msgid "You can't remove the last panel. Would you like to exit the program?"
 msgstr ""
-"最後のパネルは削除できません。このプログラムを終了してもよろしいですか？"
+"最後のパネルは削除できません。このプログラムを終了してもよろしいですか?"
 
 #: ../panel/panel-app.c:920
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr "パネル「%d」を削除しますか？"
+msgstr "パネル「%d」を削除しますか?"
 
 #: ../panel/panel-app.c:924
 msgid "The selected panel and all its items will be removed."
@@ -142,7 +142,7 @@ msgstr "このメッセージを表示して終了します"
 
 #: ../panel/main.c:61
 msgid "Show configuration dialog"
-msgstr "設定ウィンドウを表示します"
+msgstr "設定ダイアログボックスを表示します"
 
 #: ../panel/main.c:62
 msgid "Save configuration"
@@ -170,7 +170,7 @@ msgstr "ディスプレイを開けませんでした"
 
 #: ../panel/main.c:102
 msgid "Copyright (c) 2004-2007"
-msgstr "製作著作 (c) 2004-2007"
+msgstr "Copyright (c) 2004-2007"
 
 #: ../panel/main.c:103
 msgid "The Xfce development team. All rights reserved."
@@ -188,7 +188,7 @@ msgstr "xfce4-panel は既に実行されています。"
 #. restart
 #: ../panel/main.c:160
 msgid "Restarting xfce4-panel..."
-msgstr "xfce4-panel を再起動します..."
+msgstr "xfce4-panel を再起動しています..."
 
 #: ../panel/panel-dialogs.c:189
 #, c-format
@@ -309,7 +309,7 @@ msgstr "サイズ (ピクセル):"
 # FIXME: compositor won't work on irix, thus it's blind-translation
 #: ../panel/panel-dialogs.c:1471
 msgid "Transparency (%):"
-msgstr "透明度 (%s):"
+msgstr "透明度 (%):"
 
 # FIXME: compositor won't work on irix, thus it's blind-translation
 #: ../panel/panel-dialogs.c:1497
@@ -374,7 +374,7 @@ msgstr "24時間制にする(_H)"
 
 #: ../plugins/clock/clock-dialog.c:427
 msgid "Fl_ash time separators"
-msgstr ""
+msgstr "時刻の区切り記号を点滅する(_A)"
 
 #: ../plugins/clock/clock-dialog.c:433
 msgid "Sho_w AM/PM"
@@ -382,7 +382,7 @@ msgstr "AM/PMを表示する(_W)"
 
 #: ../plugins/clock/clock-dialog.c:442
 msgid "True _binary clock"
-msgstr "二進表示にする(_B)"
+msgstr "バイナリ表示にする(_B)"
 
 #. create dialog
 #: ../plugins/clock/clock-dialog.c:484
@@ -396,7 +396,7 @@ msgstr "アナログ"
 
 #: ../plugins/clock/clock-dialog.c:513
 msgid "Binary"
-msgstr "バイナリー"
+msgstr "バイナリ"
 
 #: ../plugins/clock/clock-dialog.c:514
 msgid "Digital"
@@ -433,7 +433,7 @@ msgstr "最小化したアプリのみ表示する"
 
 #: ../plugins/iconbox/iconbox.c:944
 msgid "Show applications of all workspaces"
-msgstr "全ワークスペースのアプリを表示する"
+msgstr "全ワークスペースのアプリケーションを表示する"
 
 #: ../plugins/iconbox/iconbox.c:952 ../plugins/tasklist/tasklist-dialogs.c:187
 msgid "Use all available space"
@@ -480,7 +480,7 @@ msgstr "Pythonスクリプト"
 
 #: ../plugins/launcher/launcher-dialog.c:683
 msgid "Ruby Scripts"
-msgstr "Tubyスクリプト"
+msgstr "Rubyスクリプト"
 
 #: ../plugins/launcher/launcher-dialog.c:689
 msgid "Shell Scripts"
@@ -500,7 +500,7 @@ msgstr "「%s」のアイコンを選択してください"
 #: ../plugins/launcher/launcher-dialog.c:842
 #: ../plugins/launcher/launcher-dialog.c:1341
 msgid "Unnamed"
-msgstr ""
+msgstr "未設定"
 
 #: ../plugins/launcher/launcher-dialog.c:1120
 msgid "_Name"
@@ -533,21 +533,19 @@ msgstr "起動通知を行う(_S)"
 #. create new dialog
 #: ../plugins/launcher/launcher-dialog.c:1523
 msgid "Program Launcher"
-msgstr "プログラムのランチャー"
+msgstr "プログラムランチャー"
 
 #: ../plugins/launcher/launcher-dialog.c:1551
-#, fuzzy
 msgid "A_rrow:"
-msgstr "矢印ボタン(_R)"
+msgstr "矢印ボタン(_R):"
 
 #: ../plugins/launcher/launcher-dialog.c:1557
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #: ../plugins/launcher/launcher-dialog.c:1562
-#, fuzzy
 msgid "Inside Button"
-msgstr "アイコンボタン(_I)"
+msgstr "アイコンボタン"
 
 #: ../plugins/pager/pager.c:365 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
@@ -566,18 +564,17 @@ msgid "Switch workspaces using the mouse wheel"
 msgstr "マウスホイールを使用してワークスペースを切り替える"
 
 #: ../plugins/pager/pager.c:434
-#, fuzzy
 msgid "Show workspace names"
-msgstr "ワークスペースアクションを表示する(_K)"
+msgstr "ワークスペースアクションを表示する"
 
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
 msgid "Separator or Spacing"
-msgstr "セパレーターまたはスペース"
+msgstr "セパレータまたは間隔"
 
 #: ../plugins/separator/separator.c:430
 msgid "Separator Style"
-msgstr "セパレーターのスタイル"
+msgstr "セパレータのスタイル"
 
 #. space
 #: ../plugins/separator/separator.c:437
@@ -594,7 +591,7 @@ msgstr "線(_L)"
 
 #: ../plugins/separator/separator.c:464
 msgid "_Handle"
-msgstr "把手(_H)"
+msgstr "取っ手(_H)"
 
 #: ../plugins/separator/separator.c:473
 msgid "_Dots"
@@ -623,29 +620,26 @@ msgstr "この画面には既に実行しているシステムトレイがあり
 #. message
 #: ../plugins/systray/xfce-tray-plugin.c:219
 msgid "The tray manager lost selection"
-msgstr ""
+msgstr "トレイマネージャーはセレクションを失いました"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:280
-#, fuzzy
 msgid "Are you sure you want to clear the list of known applications?"
-msgstr "ワークスペース「%s」を削除してもよろしいですか？"
+msgstr "既知のアプリケーションのリストをクリアしてもよろしいですか?"
 
 #. number of rows
 #: ../plugins/systray/xfce-tray-dialogs.c:374
-#, fuzzy
 msgid "_Number of rows:"
-msgstr "行数:"
+msgstr "行数(_N):"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
-#, fuzzy
 msgid "Hidden Applications"
-msgstr "アプリを選択してください"
+msgstr "隠されたアプリケーション"
 
 #: ../plugins/systray/xfce-tray-manager.c:431
 #, c-format
 msgid "Failed to acquire manager selection for screen %d"
-msgstr ""
+msgstr "スクリーン %d の管理セレクションの取得に失敗しました"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:143
 #: ../plugins/tasklist/tasklist-dialogs.c:209
@@ -659,11 +653,11 @@ msgstr "最小幅:"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:194
 msgid "Use flat buttons"
-msgstr "ボタンの枠を表示しない"
+msgstr "フラットボタンを使用する"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:200
 msgid "Show handle"
-msgstr "把手を表示する"
+msgstr "取っ手を表示する"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:212
 msgid "Show tasks from _all workspaces"
@@ -685,12 +679,12 @@ msgstr "常にタスクをまとめる"
 #: ../plugins/windowlist/windowlist.c:263
 #, c-format
 msgid "Are you sure you want to remove workspace %d?"
-msgstr "ワークスペース %d を削除してもよろしいですか？"
+msgstr "ワークスペース %d を削除してもよろしいですか?"
 
 #: ../plugins/windowlist/windowlist.c:264
 #, c-format
 msgid "Are you sure you want to remove workspace '%s'?"
-msgstr "ワークスペース「%s」を削除してもよろしいですか？"
+msgstr "ワークスペース「%s」を削除してもよろしいですか?"
 
 #: ../plugins/windowlist/windowlist.c:477
 #, c-format
@@ -766,7 +760,7 @@ msgstr "ワークスペースアクションを表示する(_K)"
 
 #: ../mcs-plugin/plugin.c:39
 msgid "Failed to launch 'xfce4-panel -c'"
-msgstr "'xfce4-panel -c' を実行できません"
+msgstr "'xfce4-panel -c' を実行できませんでした"
 
 #: ../mcs-plugin/plugin.c:57
 msgid "Panel"
@@ -778,15 +772,15 @@ msgstr "アクションボタン"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
-msgstr "ログアウトまたは画面をロックします。"
+msgstr "ログアウトまたは画面をロックします"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr "今何時ですか？"
+msgstr "今何時ですか?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
-msgstr "実行している全てのアプリケーションを表示します。"
+msgstr "実行している全てのアプリケーションのアイコンを表示します"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -794,35 +788,35 @@ msgstr "ランチャー"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr "オプションでメニューが付くプログラムランチャーです。"
+msgstr "オプションでメニューが付くプログラムランチャーです"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr "全ての仮想デスクトップのミニチュアを表示します。"
+msgstr "全ての仮想デスクトップのミニチュアを表示します"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr "パネルのアイテム間に隙間か棒線を追加します。"
+msgstr "パネルのアイテム間に隙間か棒線を追加します"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr "デスクトップ表示"
+msgstr "デスクトップを表示"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
-msgstr "デスクトップを表示したり隠したりします。"
+msgstr "デスクトップの表示/非表示を切り替えます"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
-msgstr "通知アイコンを表示します。"
+msgstr "通知アイコンを表示します"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
-msgstr "実行している全てのアプリケーションを表示します。"
+msgstr "実行している全てのアプリケーションを表示します"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr "利用可能なウィンドウのリストを表示します。"
+msgstr "利用可能なウィンドウのリストを表示します"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
