[intl:hu] little fixes
(Old svn revision: 28112)

--- a/po/hu.po
+++ b/po/hu.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2008-01-05 21:59+0100\n"
+"PO-Revision-Date: 2008-10-08 21:30+0100\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -521,7 +521,7 @@ msgstr "Válassz ikont ehhez: \"%s\""
 #: ../plugins/launcher/launcher-dialog.c:842
 #: ../plugins/launcher/launcher-dialog.c:1341
 msgid "Unnamed"
-msgstr ""
+msgstr "Névtelen"
 
 #: ../plugins/launcher/launcher-dialog.c:1120
 msgid "_Name"
