Translation updates and additions for many packages in es, fr, id, ja, nb_NO and tr
(Old svn revision: 28293)

--- a/po/id.po
+++ b/po/id.po
@@ -8,11 +8,11 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2008-06-23 15:46+0700\n"
+"PO-Revision-Date: 2008-10-11 19:56+0700\n"
 "Last-Translator: Andhika Padmawan <andhika.padmawan@gmail.com>\n"
 "Language-Team: Indonesian <id@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../config/launcher-7.rc.in.h:1
@@ -263,7 +263,7 @@ msgstr "Bebas Bergerak"
 
 #: ../panel/panel-dialogs.c:1167
 msgid "Auto_hide"
-msgstr "Otomatis sembunyi (_h)"
+msgstr "Otomatis _sembunyi"
 
 #: ../panel/panel-dialogs.c:1185 ../plugins/actions/actions.c:471
 msgid "Orientation:"
@@ -361,11 +361,11 @@ msgstr "Suai"
 
 #: ../plugins/clock/clock-dialog.c:412
 msgid "Display _seconds"
-msgstr "Tampilkan detik (_s)"
+msgstr "Tampilkan _detik"
 
 #: ../plugins/clock/clock-dialog.c:421
 msgid "Use 24-_hour clock"
-msgstr "Gunakan format 24-jam (_h)"
+msgstr "Gunakan _format 24-jam"
 
 #: ../plugins/clock/clock-dialog.c:427
 msgid "Fl_ash time separators"
@@ -373,7 +373,7 @@ msgstr "Pemisah waktu fl_ash"
 
 #: ../plugins/clock/clock-dialog.c:433
 msgid "Sho_w AM/PM"
-msgstr "Tampilkan AM/PM (_w)"
+msgstr "Tampil_kan AM/PM"
 
 #: ../plugins/clock/clock-dialog.c:442
 msgid "True _binary clock"
@@ -405,7 +405,7 @@ msgstr "LCD"
 #: ../plugins/clock/clock-dialog.c:520
 #: ../plugins/systray/xfce-tray-dialogs.c:362
 msgid "Show _frame"
-msgstr "Tampilkan bingkai (_f)"
+msgstr "Tampilkan _bingkai"
 
 #. tooltip settings
 #: ../plugins/clock/clock-dialog.c:527
@@ -511,11 +511,11 @@ msgstr "_Ikon"
 
 #: ../plugins/launcher/launcher-dialog.c:1175
 msgid "Co_mmand"
-msgstr "Perintah (_m)"
+msgstr "Perin_tah"
 
 #: ../plugins/launcher/launcher-dialog.c:1202
 msgid "_Working Directory"
-msgstr "Direktori Kerja (_W)"
+msgstr "_Direktori Kerja"
 
 #: ../plugins/launcher/launcher-dialog.c:1234
 msgid "Run in _terminal"
@@ -523,7 +523,7 @@ msgstr "Jalankan di _terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:1250
 msgid "Use _startup notification"
-msgstr "Gunakan pemberitahuan hidupkan (_s)"
+msgstr "Gunakan _pemberitahuan hidupkan"
 
 #. create new dialog
 #: ../plugins/launcher/launcher-dialog.c:1523
@@ -532,7 +532,7 @@ msgstr "Peluncur Program"
 
 #: ../plugins/launcher/launcher-dialog.c:1551
 msgid "A_rrow:"
-msgstr "Panah (_r)"
+msgstr "Pana_h"
 
 #: ../plugins/launcher/launcher-dialog.c:1557
 msgid "Default"
@@ -574,7 +574,7 @@ msgstr "Gaya Pemisah"
 #. space
 #: ../plugins/separator/separator.c:437
 msgid "_Empty Space"
-msgstr "Ruang Kosong (_E)"
+msgstr "_Ruang Kosong"
 
 #: ../plugins/separator/separator.c:446
 msgid "_Expanding Empty Space"
@@ -582,15 +582,15 @@ msgstr "_Perluas Ruang Kosong"
 
 #: ../plugins/separator/separator.c:455
 msgid "_Line"
-msgstr "Baris (_L)"
+msgstr "_Baris"
 
 #: ../plugins/separator/separator.c:464
 msgid "_Handle"
-msgstr "Penanganan (_H)"
+msgstr "_Penanganan"
 
 #: ../plugins/separator/separator.c:473
 msgid "_Dots"
-msgstr "Titik (_D)"
+msgstr "_Titik"
 
 #: ../plugins/showdesktop/showdesktop.c:33
 msgid "Restore hidden windows"
@@ -624,7 +624,7 @@ msgstr "Anda yakin ingin membersihkan senarai aplikasi yang diketahui?"
 #. number of rows
 #: ../plugins/systray/xfce-tray-dialogs.c:374
 msgid "_Number of rows:"
-msgstr "Jumlah baris: (_N)"
+msgstr "_Jumlah baris:"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
@@ -723,11 +723,11 @@ msgstr "Pemberitahuan Penting"
 
 #: ../plugins/windowlist/windowlist-dialog.c:164
 msgid "_Disabled"
-msgstr "Non aktifkan (_D)"
+msgstr "_Non aktifkan"
 
 #: ../plugins/windowlist/windowlist-dialog.c:173
 msgid "For _other workspaces"
-msgstr "Untuk ruang kerja lainnya (_o)"
+msgstr "Untuk ruang kerja _lainnya"
 
 #: ../plugins/windowlist/windowlist-dialog.c:182
 msgid "For _all workspaces"
@@ -735,15 +735,15 @@ msgstr "Untuk semu_a ruang kerja"
 
 #: ../plugins/windowlist/windowlist-dialog.c:196
 msgid "_Icon button"
-msgstr "Tombol ikon (_I)"
+msgstr "Tombol _ikon"
 
 #: ../plugins/windowlist/windowlist-dialog.c:203
 msgid "A_rrow button"
-msgstr "Tombol panah (_r)"
+msgstr "Tombol _panah"
 
 #: ../plugins/windowlist/windowlist-dialog.c:221
 msgid "Show _windows from all workspaces"
-msgstr "Tampilkan jendela dari semua ruang kerja (_w)"
+msgstr "Tampilkan _jendela dari semua ruang kerja"
 
 #: ../plugins/windowlist/windowlist-dialog.c:230
 msgid "Show a_pplication icons"
