--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-18  Maximilian Schleiss <maximilian@xfce.org>
+
+	* id.po: Indonesian translation update (Andhika Padmawan)
+
 2008-10-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ja.po: Japanese translation update (Masato Hashimoto)
