* Don't spawn zombies (bug #4490). * Escape spaces in launcher commands (bug #4507).
(Old svn revision: 28562)

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@
 - Implement SmRestartImmediately (bug #4516).
 - Reverse the order of the launcher menu when the panel is on 
   the top of the screen (bug #4450).
+- Don't spawn zombies (bug #4490).
+- Escape spaces in launcher commands (bug #4507). 
 
 
 4.5.91
