Czech translation updated
(Old svn revision: 28570)

--- a/po/cs.po
+++ b/po/cs.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the xfce4-panel package.
 # Lukáš Konarovský <daeltar@daeltar.org>, 2003.
 # Alois Nespor <Alois.Nespor@seznam.cz>, 2004.
-# Michal Várady <miko.vaji@gmail.com>, 2006.
+# Michal Várady <miko.vaji@gmail.com>, 2006-2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2007-12-16 16:57+0100\n"
+"PO-Revision-Date: 2008-11-01 23:00+0100\n"
 "Last-Translator: Michal Várady <miko.vaji@gmail.com>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -159,7 +159,7 @@ msgstr "Restartovat panely"
 
 #: ../panel/main.c:64
 msgid "End the session"
-msgstr "Ukončit sezení"
+msgstr "Ukončit relaci"
 
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
@@ -391,9 +391,8 @@ msgid "Use 24-_hour clock"
 msgstr "Používat 24_hodinový cyklus"
 
 #: ../plugins/clock/clock-dialog.c:427
-#, fuzzy
 msgid "Fl_ash time separators"
-msgstr "O_ddělovače blikajícího času"
+msgstr "Bli_kající oddělovač"
 
 #: ../plugins/clock/clock-dialog.c:433
 msgid "Sho_w AM/PM"
