- Don't escape command but quote them when browsing for an application.   Since we accept command with arguments in 1 line, it's impossible to   tell what's the command and the arguments (bug #4549).
(Old svn revision: 28579)

--- a/NEWS
+++ b/NEWS
@@ -9,7 +9,8 @@
 - Reverse the order of the launcher menu when the panel is on 
   the top of the screen (bug #4450).
 - Don't spawn zombies (bug #4490).
-- Escape spaces in launcher commands (bug #4507). 
+- Quote commands in the launcher when selecting an application 
+  (bug #4507, bug #4549).
 
 
 4.5.91
