Translation updates and additions - de es ku tr
(Old svn revision: 28595)

--- a/po/es.po
+++ b/po/es.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2008-09-29 22:22+0100\n"
+"PO-Revision-Date: 2008-11-02 13:45+0100\n"
 "Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -27,7 +27,7 @@ msgstr "Emulador de terminal para X"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr "Editar ficheros de texto"
+msgstr "Editar archivos de texto"
 
 #: ../config/launcher-8.rc.in.h:2
 msgid "Editor"
@@ -35,15 +35,15 @@ msgstr "Editor"
 
 #: ../config/launcher-9.rc.in.h:1
 msgid "File Manager"
-msgstr "Gestor de ficheros"
+msgstr "Administrador de archivos"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr "Gestione ficheros y carpetas"
+msgstr "Gestione archivos y carpetas"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr "Navegue en Internet"
+msgstr "Navegue por Internet"
 
 #: ../config/launcher-10.rc.in.h:2
 msgid "Web Browser"
@@ -62,7 +62,7 @@ msgstr "¿Eliminar \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:620
 msgid "The item will be removed from the panel and its configuration will be lost."
-msgstr "El elemento se elimará del panel y se perderá su configuración."
+msgstr "El elemento se eliminará del panel y se perderá su configuración."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:837
@@ -110,12 +110,12 @@ msgstr "Reiniciar"
 
 #: ../panel/panel.c:745
 msgid "About the Xfce Panel"
-msgstr "Acerca del Panel de Xfce"
+msgstr "Acerca de Panel de Xfce"
 
 #: ../panel/panel-app.c:258
 #: ../panel/panel-app.c:892
 msgid "Exit Xfce Panel?"
-msgstr "¿Salir del Panel de Xfce?"
+msgstr "¿Salir de Panel de Xfce?"
 
 #: ../panel/panel-app.c:890
 #: ../panel/panel-app.c:922
@@ -309,7 +309,7 @@ msgstr "A ambos lados"
 
 #: ../panel/panel-dialogs.c:1300
 msgid "Select Monitor"
-msgstr "Elija monitor"
+msgstr "Seleccione monitor"
 
 #. appearance settings
 #. appearance
@@ -324,7 +324,7 @@ msgstr "Apariencia"
 
 #: ../panel/panel-dialogs.c:1441
 msgid "Size (pixels):"
-msgstr "Tamaño (pixels):"
+msgstr "Tamaño (píxeles):"
 
 #: ../panel/panel-dialogs.c:1471
 msgid "Transparency (%):"
@@ -360,7 +360,7 @@ msgstr "Nuevo panel"
 #: ../panel/panel-dialogs.c:1716
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
 msgid "Panel Manager"
-msgstr "Gestor de Panel"
+msgstr "Gestor de panel"
 
 #: ../plugins/actions/actions.c:267
 #: ../plugins/actions/actions.c:303
@@ -370,7 +370,7 @@ msgstr "Bloquear pantalla"
 
 #: ../plugins/actions/actions.c:419
 msgid "Panel Actions"
-msgstr "Acciones del Panel"
+msgstr "Acciones del panel"
 
 #: ../plugins/actions/actions.c:449
 msgid "Select action type:"
@@ -420,7 +420,7 @@ msgstr "Binario"
 
 #: ../plugins/clock/clock-dialog.c:514
 msgid "Digital"
-msgstr "Dígital"
+msgstr "Digital"
 
 #: ../plugins/clock/clock-dialog.c:515
 msgid "LCD"
@@ -430,12 +430,12 @@ msgstr "LCD"
 #: ../plugins/clock/clock-dialog.c:520
 #: ../plugins/systray/xfce-tray-dialogs.c:362
 msgid "Show _frame"
-msgstr "Mostrar _cuadro"
+msgstr "Mostrar _marco"
 
 #. tooltip settings
 #: ../plugins/clock/clock-dialog.c:527
 msgid "Tooltip Format"
-msgstr "Formato de Consejos"
+msgstr "Formato de consejos"
 
 #. clock settings
 #: ../plugins/clock/clock-dialog.c:553
@@ -478,11 +478,11 @@ msgstr "Sin icono"
 
 #: ../plugins/launcher/launcher-dialog.c:597
 msgid "Select a Directory"
-msgstr "Elija un Directorio"
+msgstr "Elija un directorio"
 
 #: ../plugins/launcher/launcher-dialog.c:641
 msgid "Select an Application"
-msgstr "Elija una Aplicación"
+msgstr "Elija una aplicación"
 
 #: ../plugins/launcher/launcher-dialog.c:651
 msgid "All Files"
@@ -490,7 +490,7 @@ msgstr "Todos los ficheros"
 
 #: ../plugins/launcher/launcher-dialog.c:656
 msgid "Executable Files"
-msgstr "Archivos Ejecutables"
+msgstr "Archivos ejecutables"
 
 #: ../plugins/launcher/launcher-dialog.c:671
 msgid "Perl Scripts"
@@ -506,7 +506,7 @@ msgstr "Scripts de Ruby"
 
 #: ../plugins/launcher/launcher-dialog.c:689
 msgid "Shell Scripts"
-msgstr "Scripts de Shell"
+msgstr "Scripts de shell"
 
 #: ../plugins/launcher/launcher-dialog.c:761
 msgid "Unknown"
@@ -516,7 +516,7 @@ msgstr "Desconocido"
 #: ../plugins/launcher/launcher-dialog.c:764
 #, c-format
 msgid "Select an Icon for \"%s\""
-msgstr "Elija un Icono para \"%s\""
+msgstr "Elija un icono para \"%s\""
 
 #. build name
 #: ../plugins/launcher/launcher-dialog.c:842
@@ -542,7 +542,7 @@ msgstr "Co_mando"
 
 #: ../plugins/launcher/launcher-dialog.c:1202
 msgid "_Working Directory"
-msgstr "Directorio de _Trabajo"
+msgstr "Directorio de _trabajo"
 
 #: ../plugins/launcher/launcher-dialog.c:1234
 msgid "Run in _terminal"
@@ -572,7 +572,7 @@ msgstr "Botón Interior"
 #: ../plugins/pager/pager.c:365
 #: ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
-msgstr "Paginador"
+msgstr "Selector de áreas de trabajo"
 
 #: ../plugins/pager/pager.c:396
 msgid "Number of rows:"
@@ -593,20 +593,20 @@ msgstr "Mostrar nombres de las áreas de trabajo"
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
 msgid "Separator or Spacing"
-msgstr "Separador o espaciador"
+msgstr "Separador o espacio"
 
 #: ../plugins/separator/separator.c:430
 msgid "Separator Style"
-msgstr "Estilo de Separador"
+msgstr "Estilo de separador"
 
 #. space
 #: ../plugins/separator/separator.c:437
 msgid "_Empty Space"
-msgstr "Espacio _Vacío"
+msgstr "Espacio _vacío"
 
 #: ../plugins/separator/separator.c:446
 msgid "_Expanding Empty Space"
-msgstr "Espacio Vacío _Expansible"
+msgstr "Espacio vacío _expansible"
 
 #: ../plugins/separator/separator.c:455
 msgid "_Line"
@@ -626,7 +626,7 @@ msgstr "Restaurar ventanas ocultas"
 
 #: ../plugins/showdesktop/showdesktop.c:34
 msgid "Hide windows and show desktop"
-msgstr "Ocultar ventansa y mostrar escritorio"
+msgstr "Ocultar ventanas y mostrar escritorio"
 
 #. create a dialog
 #. create dialog
@@ -634,16 +634,16 @@ msgstr "Ocultar ventansa y mostrar escritorio"
 #: ../plugins/systray/xfce-tray-dialogs.c:333
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr "Área de Notificación"
+msgstr "Área de notificación"
 
 #: ../plugins/systray/xfce-tray-plugin.c:98
 msgid "There is already a system tray running on this screen"
-msgstr "Ya existe un área de notificación ejecutandose en esta pantalla"
+msgstr "Ya existe un área de notificación ejecutándose en esta pantalla"
 
 #. message
 #: ../plugins/systray/xfce-tray-plugin.c:219
 msgid "The tray manager lost selection"
-msgstr "El gestor notificación de sistema perdió la selección"
+msgstr "El gestor de notificación de sistema perdió la selección"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:280
 msgid "Are you sure you want to clear the list of known applications?"
@@ -657,7 +657,7 @@ msgstr "_Número de filas:"
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
 msgid "Hidden Applications"
-msgstr "Aplicaciones Ocultas"
+msgstr "Aplicaciones ocultas"
 
 #: ../plugins/systray/xfce-tray-manager.c:431
 #, c-format
@@ -676,7 +676,7 @@ msgstr "Ancho mínimo:"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:194
 msgid "Use flat buttons"
-msgstr "Usar los botones planos"
+msgstr "Usar botones planos"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:200
 msgid "Show handle"
@@ -740,7 +740,7 @@ msgstr "Lista de ventanas"
 msgid "<i>Urgency notification</i> will blink the button when an application needs attention."
 msgstr ""
 "El <i>notificador de urgencia</i> hará que el botón parpadee cuando\n"
-"una aplicación requiere atención."
+"una aplicación requiera atención."
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:157
