* be.po: Updated Belarusian translation
(Old svn revision: 28678)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-09  Alexander Nyakhaychyk  <nab@mail.by>
+
+	* be.po: Updated Belarusian translation
+
 2008-11-02  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po: Spanish translation update (Abel Martín)
