* Update the tooltip of the clock when it is visible.
(Old svn revision: 28684)

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@
 - Quote commands in the launcher when selecting an application 
   (bug #4507, bug #4549).
 - Restore panel workspace names after panel restart (bug #4589).
+- Update the tooltip of the clock when it is visible.
 
 
 4.5.91
