--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-11  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Basque translation update
+
 2008-11-09  Alexander Nyakhaychyk  <nab@mail.by>
 
 	* be.po: Updated Belarusian translation
