--- a/po/eu.po
+++ b/po/eu.po
@@ -13,11 +13,12 @@ msgstr ""
 "PO-Revision-Date: 2008-05-02 23:12+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Euskara <debian-l10n-basque@lists.debian.org>\n"
+"Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 1.2.0\n"
 
 #: ../config/launcher-7.rc.in.h:1
 msgid "Command Prompt"
@@ -561,7 +562,7 @@ msgstr "Zutabe kopurua:"
 
 #: ../plugins/pager/pager.c:426
 msgid "Switch workspaces using the mouse wheel"
-msgstr "Idazmahai birtualak sagu erruberaren bidez txandakatu"
+msgstr "Idazmahai birtualak sagu gurpilaren bidez txandakatu"
 
 #: ../plugins/pager/pager.c:434
 msgid "Show workspace names"
@@ -821,4 +822,3 @@ msgstr "Leiho erabilgarri zerrenda bistarazi"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "Xfce 4 panel kudeatzailea"
-
