--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@
 ======
 - Cache tooltip icons. Since gtk queries it a lot, resulting in too many
   open()'s for loading the pixbuf (bug #4616).
+- Rebuild the plugin if the properties dialog is cancelled (bug #4612).
 
 
 4.5.92
