Translations updates and additions - ca, de, es, id, tr, uk
(Old svn revision: 28829)

--- a/po/es.po
+++ b/po/es.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2008-11-02 13:45+0100\n"
+"PO-Revision-Date: 2008-11-16 12:13+0100\n"
 "Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -27,7 +27,7 @@ msgstr "Emulador de terminal para X"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr "Editar archivos de texto"
+msgstr "Edite archivos de texto"
 
 #: ../config/launcher-8.rc.in.h:2
 msgid "Editor"
@@ -91,7 +91,7 @@ msgstr "Añadir nuevo elemento"
 #: ../panel/panel.c:694
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
 msgid "Customize Panel"
-msgstr "Personalizar panel"
+msgstr "Personalice el panel"
 
 #: ../panel/panel.c:705
 msgid "Add Items"
@@ -516,7 +516,7 @@ msgstr "Desconocido"
 #: ../plugins/launcher/launcher-dialog.c:764
 #, c-format
 msgid "Select an Icon for \"%s\""
-msgstr "Elija un icono para \"%s\""
+msgstr "Seleccione un icono para \"%s\""
 
 #. build name
 #: ../plugins/launcher/launcher-dialog.c:842
