--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-16  Maximilian Schleiss <maximilian@xfce.org>
+
+	* de.po: German translation update (Fabian Nowak)
+	* es.po: Spanish translation update (Abel Martín)
+
 2008-11-11  Piarres Beobide <pi@beobide.net>
 
         * eu.po: Basque translation update
