--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-19 Lars Nielsen <lars@mit-web.dk>
+
+	* da.po : Updated danish translation
+
 2005-11-06 09:26  Daichi Kawahata <daichi@xfce.org>
 
 	* hu.po: Update Hungarian translation by Attila SZERVAC
