--- a/po/da.po
+++ b/po/da.po
@@ -2,18 +2,22 @@
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Jesper Berth <bigsanta@berthit.dk>, 2005.
-#
+# Lars Nielsen <lars@mit-web.dk>, 2008.
+# Per Kongstad <p_kongstad@op.pl>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-12-07 12:32+0100\n"
-"PO-Revision-Date: 2005-09-29 13:46+0900\n"
-"Last-Translator: Jesper Berth <bigsanta@berthit.dk>\n"
-"Language-Team: Danish <dansk@klid.dk>\n"
+"PO-Revision-Date: 2008-10-27 15:45+0100\n"
+"Last-Translator: Per Kongstad <p_kongstad@op.pl>\n"
+"Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Language: Danish\n"
+"X-Poedit-Country: DENMARK\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
 #: panel/xfce_support.c:557
 msgid "Select file"
@@ -21,19 +25,21 @@ msgstr "Vælg fil"
 
 #: panel/settings.c:187
 msgid "No data was found. The panel will be empty."
-msgstr "Data ikke fundet, panelet bliver tomt"
+msgstr "Data ikke fundet, panelet bliver tomt."
 
-#: panel/controls_dialog.c:89 panel/item_dialog.c:1178
+#: panel/controls_dialog.c:89
+#: panel/item_dialog.c:1178
 msgid "Position:"
-msgstr "Position"
+msgstr "Placering:"
 
 #: panel/controls_dialog.c:155
 msgid "Item properties"
-msgstr "Element indstillinger"
+msgstr "Elementegenskaber"
 
-#: panel/controls_dialog.c:209 panel/controls.c:711
+#: panel/controls_dialog.c:209
+#: panel/controls.c:711
 msgid "Removing the item will also remove its popup menu."
-msgstr "Fjerner du dette element vil popup menuen forsvinde"
+msgstr "Fjerner du dette element vil pop op-menuen også forsvinde."
 
 #: panel/item_dialog.c:124
 msgid "Select command"
@@ -41,15 +47,15 @@ msgstr "Vælg kommando"
 
 #: panel/item_dialog.c:268
 msgid "Command:"
-msgstr "Kommando"
+msgstr "Kommando:"
 
 #: panel/item_dialog.c:311
 msgid "Run in _terminal"
-msgstr "Kør i terminal"
+msgstr "Kør i _terminal"
 
 #: panel/item_dialog.c:329
 msgid "Use startup _notification"
-msgstr "Brug startup besked"
+msgstr "Brug _opstartbesked"
 
 #: panel/item_dialog.c:515
 msgid "Other Icon"
@@ -57,40 +63,42 @@ msgstr "Andet ikon"
 
 #: panel/item_dialog.c:626
 msgid "Drag file onto this frame to change the icon"
-msgstr "Træk fil til denne ramme for at skifte ikon"
+msgstr "Træk fil til denne ramme for at skifte ikonet"
 
 #: panel/item_dialog.c:938
 msgid "Caption:"
-msgstr "Billedtekst"
+msgstr "Indspilning:"
 
 #: panel/item_dialog.c:967
 msgid "Tooltip:"
-msgstr "Værktøjstip"
+msgstr "Værktøjstip:"
 
 #: panel/item_dialog.c:995
 msgid "Attach menu to launcher"
-msgstr "Tilføj menu til afvikler"
+msgstr "Tilføj menu til starter"
 
 #: panel/item_dialog.c:1215
 msgid "Change menu item"
-msgstr "Ændre menu element"
+msgstr "Ændre menuelement"
 
 #. add buttons
-#: panel/item_dialog.c:1221 panel/controls.c:748
+#: panel/item_dialog.c:1221
+#: panel/controls.c:748
 msgid "_Remove"
-msgstr "Fjern"
+msgstr "_Fjern"
 
-#: panel/item_dialog.c:1233 panel/item.c:718
+#: panel/item_dialog.c:1233
+#: panel/item.c:718
 msgid "Launcher"
-msgstr "Afvikler"
+msgstr "Starter"
 
 #: panel/item.c:546
 msgid "Click mouse button 3 to change item"
-msgstr "Klik midterste musseknap for at ændre element"
+msgstr "Klik midterste museknap for at ændre element"
 
 #: panel/item.c:571
 msgid "Add launcher"
-msgstr "Tilføj afvikler"
+msgstr "Tilføj starter"
 
 #: panel/item.c:576
 msgid "Add new item"
@@ -98,7 +106,7 @@ msgstr "Tilføj nyt element"
 
 #: panel/main.c:120
 msgid "Are you sure you want to exit?"
-msgstr "Er du sikker på at du vil lukke?"
+msgstr "Er du sikker på, at du vil afslutte?"
 
 #: panel/main.c:401
 #, c-format
@@ -114,10 +122,10 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" Xfce Panel\n"
+" Xfce-panelet\n"
 " Version %s\n"
 "\n"
-" En del af Xfce Desktop Environment\n"
+" En del af Xfce's skrivebordsmiljø\n"
 " http://www.xfce.org\n"
 "\n"
 " Licenseret under GNU GPL.\n"
@@ -126,54 +134,58 @@ msgstr ""
 #: panel/main.c:488
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr "%s: Startede succesfuldt uden session management"
+msgstr "%s: Startede succesfuldt uden sessionshåndtering"
 
 #: panel/main.c:493
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr "%s: Startede succesfuldt med session management"
+msgstr "%s: Startede succesfuldt med sessionshåndtering"
 
 #: panel/controls.c:666
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr "Kunne ikke lave panel element \"%s\"."
+msgstr "Kunne ikke oprette panelelement \"%s\"."
 
-#: panel/controls.c:743 panel/panel.c:647
+#: panel/controls.c:743
+#: panel/panel.c:647
 msgid "_Properties..."
-msgstr "Egenskaber"
+msgstr "_Egenskaber..."
 
-#: panel/controls.c:757 panel/panel.c:637
+#: panel/controls.c:757
+#: panel/panel.c:637
 msgid "Add _new item"
-msgstr "Tilføj nyt element"
+msgstr "Tilføj _nyt element"
 
 #: panel/controls.c:1040
 msgid "This item has no configuration options"
 msgstr "Dette element har ingen indstillingsmuligheder"
 
-#: panel/panel.c:628 panel/panel.c:1055 settings/xfce_settings_plugin.c:86
+#: panel/panel.c:628
+#: panel/panel.c:1055
+#: settings/xfce_settings_plugin.c:86
 #: settings/xfce_settings_dialog.c:450
 msgid "Xfce Panel"
-msgstr "Xfce Panel"
+msgstr "Xfce-panel"
 
 #: panel/panel.c:652
 msgid "_About Xfce"
-msgstr "Om Xfce"
+msgstr "_Om Xfce"
 
 #: panel/panel.c:657
 msgid "_Help"
-msgstr "Hjælp"
+msgstr "_Hjælp"
 
 #: panel/panel.c:666
 msgid "_Lock screen"
-msgstr "Lås skærm"
+msgstr "Lås _skærm"
 
 #: panel/panel.c:671
 msgid "_Restart"
-msgstr "Genstart"
+msgstr "_Genstart"
 
 #: panel/panel.c:680
 msgid "E_xit"
-msgstr "Luk"
+msgstr "_Afslut"
 
 #: panel/icons.c:63
 msgid "Default"
@@ -181,15 +193,15 @@ msgstr "Standard"
 
 #: panel/icons.c:64
 msgid "Editor"
-msgstr "Redigering"
+msgstr "Tekstredigering"
 
 #: panel/icons.c:65
 msgid "File management"
-msgstr "Fil håndtering"
+msgstr "Filhåndtering"
 
 #: panel/icons.c:66
 msgid "Utilities"
-msgstr "Værktøj"
+msgstr "Værktøjer"
 
 #: panel/icons.c:67
 msgid "Games"
@@ -197,11 +209,11 @@ msgstr "Spil"
 
 #: panel/icons.c:68
 msgid "Help browser"
-msgstr "Vejledning"
+msgstr "Hjælp til netlæser"
 
 #: panel/icons.c:69
 msgid "Multimedia"
-msgstr "Multimedia"
+msgstr "Multimedie"
 
 #: panel/icons.c:70
 msgid "Network"
@@ -229,7 +241,7 @@ msgstr "Terminal"
 
 #: panel/mcs_client.c:170
 msgid "Settings manager not available"
-msgstr "Settings manager er ikke tilgængelig"
+msgstr "Instillingshåndtering er ikke tilgængelig"
 
 #: panel/popup.c:267
 msgid "Menu"
@@ -253,11 +265,11 @@ msgstr "Kæmpe"
 
 #: settings/xfce_settings_dialog.c:175
 msgid "Horizontal"
-msgstr "horisontal"
+msgstr "Vandret"
 
 #: settings/xfce_settings_dialog.c:179
 msgid "Vertical"
-msgstr "Vertikal"
+msgstr "Lodret"
 
 #: settings/xfce_settings_dialog.c:221
 msgid "Left"
@@ -277,27 +289,27 @@ msgstr "Bund"
 
 #: settings/xfce_settings_dialog.c:268
 msgid "Panel size:"
-msgstr "Panel størrelse"
+msgstr "Panelstørrelse:"
 
 #: settings/xfce_settings_dialog.c:284
 msgid "Panel orientation:"
-msgstr "Panel orientation:"
+msgstr "Panel orientering:"
 
 #: settings/xfce_settings_dialog.c:303
 msgid "Popup position:"
-msgstr "Popup position"
+msgstr "Pop op-placering:"
 
 #: settings/xfce_settings_dialog.c:343
 msgid "Always on top:"
-msgstr "Altid øverst"
+msgstr "Altid i front:"
 
 #: settings/xfce_settings_dialog.c:397
 msgid "Autohide:"
-msgstr "Gem automatisk"
+msgstr "Autoskjul:"
 
 #: settings/xfce_settings_dialog.c:467
 msgid "Xfce Panel Settings"
-msgstr "Xfce Panel Opsætning"
+msgstr "Indstillinger for Xfce-panel"
 
 #: settings/xfce_settings_dialog.c:477
 msgid "Appearance"
@@ -317,11 +329,11 @@ msgstr "Opførsel"
 #.
 #: plugins/clock/clock.c:192
 msgid "%A, %d %B %Y"
-msgstr "%A, %d %B %Y"
+msgstr "%A %d %B %Y"
 
 #: plugins/clock/clock.c:422
 msgid "Clock type:"
-msgstr "Ur type"
+msgstr "Urets type:"
 
 #: plugins/clock/clock.c:435
 msgid "Analog"
@@ -329,7 +341,7 @@ msgstr "Analog"
 
 #: plugins/clock/clock.c:439
 msgid "Digital"
-msgstr "Digital"
+msgstr "Digitalt"
 
 #: plugins/clock/clock.c:443
 msgid "LED"
@@ -337,7 +349,7 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:505
 msgid "Hour mode:"
-msgstr "Mode:"
+msgstr "Time tilstand:"
 
 #: plugins/clock/clock.c:512
 msgid "24 hour"
@@ -353,27 +365,27 @@ msgstr "AM/PM"
 
 #: plugins/clock/clock.c:562
 msgid "Show seconds:"
-msgstr "Vis sekunder"
+msgstr "Vis sekunder:"
 
 #: plugins/clock/clock.c:675
 msgid "Xfce Clock"
-msgstr "Xfce ur"
+msgstr "Ur til Xfce"
 
 #: plugins/pager/pager.c:314
 msgid "Number of rows:"
-msgstr "Antal rækker"
+msgstr "Antal rækker:"
 
 #: plugins/pager/pager.c:316
 msgid "Number of columns:"
-msgstr "Antal kolonner"
+msgstr "Antal kolonner:"
 
 #: plugins/pager/pager.c:373
 msgid "Graphical pager"
-msgstr ""
+msgstr "Grafik sideskifter"
 
 #: plugins/switcher/switcher.c:698
 msgid "Desktop switcher"
-msgstr "Skrivebords switch"
+msgstr "Skrivebordsskifter"
 
 #: plugins/systembuttons/systembuttons.c:85
 msgid ""
@@ -381,9 +393,9 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"Du har ikke adgang til konfigurations systemet.\n"
+"Du har ikke adgang til indstillingssystemet.\n"
 "\n"
-"Spørg din system administrator for mere information"
+"Spørg din systemadministrator for mere information"
 
 #: plugins/systembuttons/systembuttons.c:170
 msgid "Lock the screen"
@@ -392,12 +404,12 @@ msgstr "Lås skærmen"
 #: plugins/systembuttons/systembuttons.c:171
 #: plugins/systembuttons/systembuttons.c:519
 msgid "Exit"
-msgstr "Luk"
+msgstr "Afslut"
 
 #: plugins/systembuttons/systembuttons.c:172
 #: plugins/systembuttons/systembuttons.c:520
 msgid "Setup"
-msgstr "Opsætning"
+msgstr "Indstilling"
 
 #: plugins/systembuttons/systembuttons.c:173
 #: plugins/systembuttons/systembuttons.c:521
@@ -411,40 +423,40 @@ msgstr "Lås"
 
 #: plugins/systembuttons/systembuttons.c:550
 msgid "Button 1:"
-msgstr "Knap 1"
+msgstr "Knap 1:"
 
 #: plugins/systembuttons/systembuttons.c:565
 msgid "Button 2:"
-msgstr "Knap 2"
+msgstr "Knap 2:"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
 msgid "_Hide"
-msgstr "gem"
+msgstr "_Gem"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
-msgstr "System knap"
+msgstr "Systemknapper"
 
 #: plugins/separator/separator.c:155
 msgid "Separator"
-msgstr ""
+msgstr "Adskiller"
 
 #: plugins/mailcheck/mailcheck.c:838
 msgid "Mail box:"
-msgstr "Post boks"
+msgstr "Postboks:"
 
 #: plugins/mailcheck/mailcheck.c:875
 msgid "New mail command:"
-msgstr "Ny post kommando:"
+msgstr "Ny postkommando:"
 
 #: plugins/mailcheck/mailcheck.c:889
 msgid "Command to run when new mail arrives"
-msgstr "Kommando ved ny post"
+msgstr "Kommando som køres ved ankomst af ny post"
 
 #: plugins/mailcheck/mailcheck.c:919
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Kommando når knappen i panelet aktiveres"
+msgstr "Kommando til kørsel når knappen i panelet aktiveres"
 
 #: plugins/mailcheck/mailcheck.c:940
 msgid "Interval (sec):"
@@ -452,4 +464,5 @@ msgstr "Interval (sek):"
 
 #: plugins/mailcheck/mailcheck.c:1016
 msgid "Mail checker"
-msgstr "Post Tjekker"
+msgstr "Posttjekker"
+
