--- a/po/ca.po
+++ b/po/ca.po
@@ -10,12 +10,13 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2008-03-21 20:14+0100\n"
+"PO-Revision-Date: 2008-11-21 18:53+0100\n"
 "Last-Translator: Carles Muñoz Gorriz <carlesmu@internautas.org>\n"
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../config/launcher-7.rc.in.h:1
 msgid "Command Prompt"
@@ -178,7 +179,7 @@ msgstr "L’equip de desenvolupament d’Xfce. Tots els drets reservats."
 #: ../panel/main.c:104
 #, c-format
 msgid "Please report bugs to <%s>."
-msgstr "Si us plau envieu els errors a <%s>."
+msgstr "Envieu els errors a <%s>."
 
 #: ../panel/main.c:148
 msgid "xfce4-panel already running"
