--- a/po/es.po
+++ b/po/es.po
@@ -10,9 +10,9 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2008-11-16 12:13+0100\n"
+"PO-Revision-Date: 2008-11-18 23:52+0100\n"
 "Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"Language-Team: Spanish/ES <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -486,7 +486,7 @@ msgstr "Elija una aplicación"
 
 #: ../plugins/launcher/launcher-dialog.c:651
 msgid "All Files"
-msgstr "Todos los ficheros"
+msgstr "Todos los archivos"
 
 #: ../plugins/launcher/launcher-dialog.c:656
 msgid "Executable Files"
