Translations updates - nb
(Old svn revision: 28943)

--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -34,11 +34,11 @@ msgstr "Redigerer"
 
 #: ../config/launcher-9.rc.in.h:1
 msgid "File Manager"
-msgstr "Filadministrasjon"
+msgstr "Filbehandler"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr "Administrere filer og mapper"
+msgstr "Behandle filer og mapper"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
@@ -256,7 +256,7 @@ msgstr "Posisjon"
 
 #: ../panel/panel-dialogs.c:1038
 msgid "Fixed Position"
-msgstr "Fiksert prosisjon"
+msgstr "Fastsatt posisjon"
 
 #: ../panel/panel-dialogs.c:1044
 msgid "Freely Moveable"
