--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-12  Maximilian Schleiss <maximilian@xfce.org>
+
+	* ja.po: Japanese translation update (Masato Hashimoto)
+
 2008-11-28  Maximilian Schleiss <maximilian@xfce.org>
 
 	* nb_NO.po: Norwegian Bokmal translation update (Terje Uriansrud)
